--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -52,6 +52,7 @@
       position: relative;
       float: right;
       z-index: 2;
+      padding-top: 1.5%;
       background-color:rgba(0,0,0,.5); // Sets to 50% transparent;
       pointer-events: auto;
     }
@@ -146,7 +147,7 @@
   
   <div id="overlay" class="overlay">
     <form method="GET" action="{% url 'classes:search' %}">
-     <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:5%; float:left;" hspace="0.5%">
+     <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:3.5%; float:left;" hspace="0.5%">
 <!--     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> -->
     <div style="width:30%; float:left;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
