--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -147,7 +147,7 @@
   
   <div id="overlay" class="overlay">
     <form method="GET" action="{% url 'classes:search' %}">
-     <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:3.5%; float:left;" hspace="0.5%">
+     <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:3.5%; float:left;" hspace="1%" vspace="15">
 <!--     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> -->
     <div style="width:30%; float:left;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
