--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -147,7 +147,7 @@
   
   <div id="overlay" class="overlay">
     <form method="GET" action="{% url 'classes:search' %}">
-     <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:50px; float:left;" hspace="1.5%" vspace="6">
+     <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:60px; float:left;" hspace="10" vspace="6">
 <!--     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> -->
     <div style="width:30%; float:left; padding-right: 10px;">
         <input name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
