--- a/classes/static/classes/assets/css/bootstrap.css
+++ b/classes/static/classes/assets/css/bootstrap.css
@@ -1717,14 +1717,14 @@ output {
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
 }
 .form-control::-moz-placeholder {
-  color: #999;
+  color: #d3d3d3;
   opacity: 1;
 }
 .form-control:-ms-input-placeholder {
-  color: #999;
+  color: #d3d3d3;
 }
 .form-control::-webkit-input-placeholder {
-  color: #999;
+  color: #d3d3d3;
 }
 .form-control[disabled],
 .form-control[readonly],
