Tried adding a reset zoom button

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -313,6 +313,23 @@ document.getElementById("Logout").onclick = function () {
     /*$('.pure-button').on('click', function(){
 mymap.locate({setView: true, maxZoom: 15});
 });*/
+
+(function() {
+  var control = new L.Control({position:'topright'});
+  control.onAdd = function(map) {
+      var azoom = L.DomUtil.create('a','resetzoom');
+      azoom.innerHTML = "[Reset Zoom]";
+      L.DomEvent
+        .disableClickPropagation(azoom)
+        .addListener(azoom, 'click', function() {
+          map.setView(map.options.center, map.options.zoom);
+        },azoom);
+      return azoom;
+    };
+  return control;
+}())
+.addTo(map);
+
     map.locate({setView: true,watch: true, maxZoom: 16});
     function onLocationFound(e) {
     var radius = e.accuracy / 2;
