--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -14,6 +14,9 @@
 
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.css">
+<script src="https://cdn.jsdelivr.net/npm/leaflet-easybutton@2/src/easy-button.js"></script>
+
   <script type="text/javascript" src="{% static 'classes/buildings.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/printers.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/laundry.js' %}"></script>
@@ -313,6 +316,13 @@ document.getElementById("Logout").onclick = function () {
     /*$('.pure-button').on('click', function(){
 mymap.locate({setView: true, maxZoom: 15});
 });*/
+
+L.easyButton('<img src="https://image.flaticon.com/icons/svg/24/24211.svg">', function (btn, map) {
+    map.locate({
+        setView: true,
+        maxZoom: 18
+    });
+}).addTo(map);
 
     map.locate({setView: true,watch: true, maxZoom: 16});
     function onLocationFound(e) {
