--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -192,7 +192,7 @@
     </div>
 
     <div style="width:120px; float:left; padding-right: 10px;">
-      <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
+      <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
         <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white;">
         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
