--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -5,9 +5,9 @@
 
 <html>
 <link rel="stylesheet" type="text/css" href="{% static 'classes/style.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.min.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.min.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/bootstrap.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'classes/assets/css/github.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'classes/dist/bootstrap-clockpicker.css' %}">
 
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
