Moved a location button

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -317,12 +317,13 @@ document.getElementById("Logout").onclick = function () {
 mymap.locate({setView: true, maxZoom: 15});
 });*/
 
-L.easyButton('<img src="https://image.flaticon.com/icons/svg/24/24211.svg">', function (btn, map) {
+L.easyButton('<img src="https://image.flaticon.com/icons/svg/24/24211.svg" style="width:16px">', function (btn, map) {
+
     map.locate({
         setView: true,
         maxZoom: 18
     });
-}).addTo(map);
+}).setPosition('bottomright').addTo(map);
 
     map.locate({setView: true,watch: true, maxZoom: 16});
     function onLocationFound(e) {
