--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -24,7 +24,7 @@
 
   <script type="text/javascript" src="{% static 'classes/assets/js/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'classes/assets/js/bootstrap.min.js' %}"></script>
-  <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.min.js' %}"></script>
+  <script type="text/javascript" src="{% static 'classes/dist/bootstrap-clockpicker.js' %}"></script>
 
 <head bgcolor="#000000">
   <title>ClassMaps</title>
