fix checkbox names

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -164,27 +164,27 @@
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <label class="switch">
           Monday
-          <input name = "q2" value = "M" type="checkbox">
+          <input name = "M" value = "M" type="checkbox">
           <span class="slider"></span>
         </label>
         <label class="switch">
           Tuesday
-          <input name = "q3" value = "T" type="checkbox">
+          <input name = "T" value = "T" type="checkbox">
           <span class="slider"></span>
         </label>
         <label class="switch">
           Wednesday
-          <input name = "q4" value = "W" type="checkbox">
+          <input name = "W" value = "W" type="checkbox">
           <span class="slider"></span>
         </label>
         <label class="switch">
           Thursday
-          <input name = "q5" value = "Th" type="checkbox">
+          <input name = "Th" value = "Th" type="checkbox">
           <span class="slider"></span>
         </label>
         <label class="switch">
           Friday
-          <input name = "q6" value = "F" type="checkbox">
+          <input name = "F" value = "F" type="checkbox">
           <span class="slider"></span>
         </label>
         </div>
