--- a/classes/templates/classes/searches.html
+++ b/classes/templates/classes/searches.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div id="resultList" style="margin-left:10%; margin-right:10%; margin-bottom: 20px;">
-    <h4 style="color: white;">Results for: "{{q}}" {{t}}</h4>
+    <h4 style="color: white;">Results for: "{{q}}" {{d}} {{t}}</h4>
 <ul class ="collection">
     {% if buildings %}
         {% for b in buildings %}
