fix website link

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -150,7 +150,7 @@
   
   <div id="overlay" class="overlay">
     <form method="GET" action="{% url 'classes:search' %}">
-     <a href="https://www.w3schools.com/html/html_images.asp">
+     <a href="http://classmaps.herokuapp.com">
      <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:52px; float:left;" hspace="10">
      </a>
 <!--     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span> -->
