tried something reset zoom

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -355,6 +355,12 @@ L.easyButton('<img src="https://image.flaticon.com/icons/svg/24/24211.svg" style
     }
     map.on('locationfound', onLocationFound);
 }).setPosition('bottomright').addTo(map);
+
+L.easyButton('<img src="http://www.free-icons-download.net/images/zoom-to-page-width-icon-27539.png" style="width:16px">', function(btn, map){
+    map.setView(
+        [40.347, -74.653],
+      zoom: 16);
+}).setPosition('bottomright').addTo(map);
     // Limits zoom (we could get rid of this)
     map.options.minZoom = 14;
     map.options.maxZoom = 18;
