--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -195,7 +195,7 @@
 
     <div style="width:120px; float:left; padding-right: 10px;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
-        <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white;">
+        <input type="text" class="form-control" name="t" placeholder="Set Time" style="color: white;" readonly>
         <span class="input-group-addon">
           <span class="glyphicon glyphicon-time"></span>
         </span>
