--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -401,7 +401,7 @@ L.easyButton('<img src="http://www.free-icons-download.net/images/zoom-to-page-w
 }
 function onEachFeature(feature, layer) {
   var buildingtext = feature.properties.name +"<br>"+
-         "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
+         "<button class=\"btn btn-success\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
              "Classes Here" +
          "</button>" +
      "</form>";
