try to make button functional

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -400,8 +400,9 @@ L.easyButton('<img src="http://www.free-icons-download.net/images/zoom-to-page-w
   //info.update(layer.feature.properties);
 }
 function onEachFeature(feature, layer) {
-  var buildingtext = feature.properties.name +"<br>"+
-         "<button class=\"btn btn-success\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
+  var buildingtext = feature.properties.name +
+         "<form method=\"GET\" action=\"{% url 'classes:search' %}\">" +"<br>"+
+         "<button class=\"btn btn-success\" name=\"q\" value=\"feature.properties.name\" type=\"submit\">" +
              "Classes Here" +
          "</button>" +
      "</form>";
