lets try that again

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -402,7 +402,7 @@ L.easyButton('<img src="http://www.free-icons-download.net/images/zoom-to-page-w
 function onEachFeature(feature, layer) {
   var buildingtext = feature.properties.name +
          "<form method=\"GET\" action=\"{% url 'classes:search' %}\">" +"<br>"+
-         "<button class=\"btn btn-success\" name=\"q\" value=\"feature.properties.name\" type=\"submit\">" +
+         "<button class=\"btn btn-success\" name=\"q\" value=feature.properties.name type=\"submit\">" +
              "Classes Here" +
          "</button>" +
      "</form>";
