--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -287,7 +287,7 @@ function closeNav() {
    });
    var input = $('#single-input').clockpicker({
      placement: 'bottom',
-     align: 'right',
+     align: 'left',
      autoclose: true,
      default: 'now'
    });
