Added button to right

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -417,7 +417,7 @@ L.easyButton('<img src="https://cdn1.iconfinder.com/data/icons/disable-sign/300/
     } else {
         x.style.display = "none";
     }
-}).setPosition('bottomleft').addTo(map);
+}).setPosition('bottomright').addTo(map);
     // Limits zoom (we could get rid of this)
     map.options.minZoom = 14;
     map.options.maxZoom = 18;
