--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -128,7 +128,7 @@
     /* Start saved list css */
     .listOverlay {
       position: fixed;
-      width: 25%;
+      width: 200px;
       height: 50%;
       top: 1;
       left: 0;
