Added home button

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -405,7 +405,7 @@ L.easyButton('<img src="https://image.flaticon.com/icons/svg/24/24211.svg" style
     map.on('locationfound', onLocationFound);
 }).setPosition('bottomright').addTo(map);
 
-L.easyButton('<img src="http://www.free-icons-download.net/images/zoom-to-page-width-icon-27539.png" style="width:16px">', function(btn, map){
+L.easyButton('<img src="https://png.icons8.com/metro/1600/home.png" style="width:16px">', function(btn, map){
     map.setView(new L.LatLng(40.347, -74.653), 16);
 //map.setView(        [40.347, -74.653],      zoom: 16);
 }).setPosition('bottomright').addTo(map);
