--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -412,7 +412,7 @@ L.easyButton('<img src="https://image.flaticon.com/icons/svg/24/24211.svg" style
 }).setPosition('bottomright').addTo(map);
 
 L.easyButton('<img src="https://png.icons8.com/metro/1600/home.png" style="width:16px">', function(btn, map){
-    map.setView(new L.LatLng(40.347, -74.653), 16);
+    map.setView(new L.LatLng(40.347, -74.653), 16); 
 //map.setView(        [40.347, -74.653],      zoom: 16);
 }).setPosition('bottomright').addTo(map);
 
@@ -604,7 +604,7 @@ if (!jQuery.isEmptyObject(lonlats)) {
         // modified this line to add parameters
         
         var name = "{{c}} {{c.building}} {{c.room}} {{c.day}} {{c.starttime}}-{{c.endtime}}";
-        if (!lon && !lat) {
+        if (lon == "" && lat == "") {
           lon = 40.3468844;
           lat = -74.6558721; 
           var name = "{{c}} "NO BUILDING" {{c.day}} {{c.starttime}}-{{c.endtime}}";
