changed size of button

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -416,7 +416,7 @@ L.easyButton('<img src="https://png.icons8.com/metro/1600/home.png" style="width
 //map.setView(        [40.347, -74.653],      zoom: 16);
 }).setPosition('bottomright').addTo(map);
 
-L.easyButton('<img src="https://png.icons8.com/metro/50/000000/save.png">', function(btn, map){
+L.easyButton('<img src="https://png.icons8.com/metro/50/000000/save.png" style="width:16px">', function(btn, map){
     var x = document.getElementById("listOverlay");
     if (x.style.display === "none") {
         x.style.display = "block";
