--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -607,7 +607,7 @@ if (!jQuery.isEmptyObject(lonlats)) {
        if (!lon && !lat) {
           lon = 40.3468844;
           lat = -74.6558721; 
-          var name = "{{c}} "NO BUILDING" {{c.day}} {{c.starttime}}-{{c.endtime}}";
+          var name = "{{c}} NO BUILDING {{c.day}} {{c.starttime}}-{{c.endtime}}";
         }
     {% endif %}
     {% if building or c %}
