try icon for save

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -607,14 +607,14 @@ if (!jQuery.isEmptyObject(lonlats)) {
        if (!lon && !lat) {
           lon = 40.3468844;
           lat = -74.6558721; 
-          var name = "{{c}} NO BUILDING {{c.day}} {{c.starttime}}-{{c.endtime}}";
+          var name = "{{c}} "NO BUILDING" {{c.day}} {{c.starttime}}-{{c.endtime}}";
         }
     {% endif %}
     {% if building or c %}
       var search = "<div>" + name + "</div>" +
       "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
           "<button id=\"addrow\" class=\"btn btn-success\" name=\"s\" value=\""+id+type+"\" type=\"submit\">" +
-              "Save" +
+              "<i class=\"fa fa-save\">"+"Save"+"</i>"+
           "</button>" +
       "</form>";
        L.marker([lat, parseFloat(lon)+offset]).addTo(map).bindPopup(search).openPopup();
