--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -548,7 +548,7 @@ var offset = 0.0001;
      var button =
      "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
          "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}b\" type=\"submit\">" +
-             "Remove" +
+             "<i class=\"fa fa-close\">"+"</i>"+"Remove" +
          "</button>" +
      "</form>";
      var text = "<div>{{s}}</div>"+button;
@@ -566,7 +566,7 @@ var offset = 0.0001;
      var button =
      "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
          "<button class=\"btn btn-remove\" name=\"r\" value=\"{{s.pk}}c\" type=\"submit\">" +
-             "Remove" +
+             "<i class=\"fa fa-close\">"+"</i>"+"Remove" +
          "</button>" +
      "</form>";
      var text = "<div>{{s}}</div>"+button;
@@ -614,7 +614,7 @@ if (!jQuery.isEmptyObject(lonlats)) {
       var search = "<div>" + name + "</div>" +
       "<form method=\"GET\" action=\"{% url 'classes:index' %}\">" +"<br>"+
           "<button id=\"addrow\" class=\"btn btn-success\" name=\"s\" value=\""+id+type+"\" type=\"submit\">" +
-              "Save" +
+              "<i class=\"fa fa-save\">"+"</i>"+"Save" +
           "</button>" +
       "</form>";
        L.marker([lat, parseFloat(lon)+offset]).addTo(map).bindPopup(search).openPopup();
