add another save icon

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -235,7 +235,7 @@
    <table id="myTable" class="table order-list">
    <thead>
        <tr>
-           <td><div class="listTitle">Saved markers</div></td>
+           <td><div class="listTitle"><i class="fa fa-saved"></i>Saved markers</div></td>
        </tr>
    </thead>
    <tfoot>
