--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -250,7 +250,7 @@
    <tfoot>
        <tr>
            <td colspan="5" style="text-align: left;">
-               <input type="button" class="btn btn-lg btn-block " id="export" value="Export to Calendar" />
+               <input type="button" id="export" value="Export to Calendar" />
            </td>
        </tr>
        <tr>
