try to fix dropdown spacing

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -191,22 +191,22 @@
           Monday
           <input name = "M" value = "M" type="checkbox">
           <span class="slider"></span>
-        </label>
+        </label><br>
         <label class="switch">
           Tuesday
           <input name = "T" value = "T" type="checkbox">
           <span class="slider"></span>
-        </label>
+        </label><br>
         <label class="switch">
           Wednesday
           <input name = "W" value = "W" type="checkbox">
           <span class="slider"></span>
-        </label>
+        </label><br>
         <label class="switch">
           Thursday
           <input name = "Th" value = "Th" type="checkbox">
           <span class="slider"></span>
-        </label>
+        </label><br>
         <label class="switch">
           Friday
           <input name = "F" value = "F" type="checkbox">
