see what this does

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -188,10 +188,9 @@
       </button>
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <label class="switch">
-          Monday
           <input name = "M" value = "M" type="checkbox">
           <span class="slider"></span>
-        </label><br>
+        </label>Monday<br>
         <label class="switch">
           Tuesday
           <input name = "T" value = "T" type="checkbox">
