--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -189,8 +189,8 @@
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <label class="switch">
           <input name = "M" value = "M" type="checkbox">
-          <span class="slider"></span>
-        </label>Monday<br>
+          <span class="slider">Monday</span>
+        </label><br>
         <label class="switch">
           Tuesday
           <input name = "T" value = "T" type="checkbox">
