adjust dropdown menu

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -64,6 +64,8 @@
     }
     .dropdown-menu{
       background-color:	#f9f9f9;
+      padding-left: 5px;
+      width: 50px
     }
     /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
@@ -156,6 +158,9 @@
       text-align: left;
     }
     /* End saved list css */
+    .switch {
+      padding: 5px
+    }
   </style>
 </head>
 
