--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -64,8 +64,6 @@
     }
     .dropdown-menu{
       background-color:	#f9f9f9;
-      padding-left: 5px;
-      width: 50px
     }
     /* Show the dropdown menu on hover */
     .dropdown:hover .dropdown-content {
@@ -158,8 +156,8 @@
       text-align: left;
     }
     /* End saved list css */
-    .switch {
-      padding: 5px
+    .slider {
+      padding-left: 10px
     }
   </style>
 </head>
