--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -157,7 +157,7 @@
     }
     /* End saved list css */
     .slider {
-      padding-left: 10px
+      padding-left: 20px;
     }
   </style>
 </head>
